# tarsis-hmi-simulator

./: .gitignore  CMakeLists.txt  README.md
cpp-fundamentals-refresher/: 01_struct_vs_class.cpp  02_raii_constructor_destructor.cpp  03_unique_ptr_basico.cpp  04_shared_ptr_use_count.cpp  05_weak_ptr_referencias_circulares.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h  mosquittomqttpublisher.cpp  mosquittomqttpublisher.h
tools/: start_telemetry_bridge.sh
